// Code generated by codegen. DO NOT EDIT.
syntax = "proto3";
package store;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "github.com/weiwolves/pkg/storage/null/null.proto";
option go_package = "store";
option (gogoproto.typedecl_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
// Store represents a single row for DB table store . Auto generated.
message Store {
	uint32 StoreID = 1 ;
	string Code = 2 ;
	uint32 WebsiteID = 3 ;
	uint32 GroupID = 4 ;
	string Name = 5 ;
	uint32 SortOrder = 6 ;
	bool IsActive = 7 ;
	StoreGroup StoreGroup = 8 ; // 1:1 store.group_id => store_group.group_id
	StoreWebsite StoreWebsite = 9 ; // 1:1 store.website_id => store_website.website_id
}
// Stores represents multiple rows for DB table store . Auto generated.
message Stores {
	repeated Store Data = 1;
}
// StoreGroup represents a single row for DB table store_group . Auto generated.
message StoreGroup {
	uint32 GroupID = 1 ;
	uint32 WebsiteID = 2 ;
	string Name = 3 ;
	uint32 RootCategoryID = 4 ;
	uint32 DefaultStoreID = 5 ;
	string Code = 6 ;
	StoreWebsite StoreWebsite = 7 ; // 1:1 store_group.website_id => store_website.website_id
}
// StoreGroups represents multiple rows for DB table store_group . Auto
// generated.
message StoreGroups {
	repeated StoreGroup Data = 1;
}
// StoreWebsite represents a single row for DB table store_website . Auto
// generated.
message StoreWebsite {
	uint32 WebsiteID = 1 ;
	string Code = 2 ;
	null.String Name = 3 [(gogoproto.nullable)=false];
	uint32 SortOrder = 4 ;
	uint32 DefaultGroupID = 5 ;
	bool IsDefault = 6 ;
	Stores Stores = 7 ; // Reversed 1:M store_website.website_id => store.website_id
	StoreGroups StoreGroups = 8 ; // Reversed 1:M store_website.website_id => store_group.website_id
}
// StoreWebsites represents multiple rows for DB table store_website . Auto
// generated.
message StoreWebsites {
	repeated StoreWebsite Data = 1;
}
